# cos

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ecosystem.config.cjs  mkdocs.yml  package-lock.json  package.json  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
backup/: README.md  backup.mjs  backup.service.json  config.mjs  restore.mjs
board/: boardapp.service.json  eslint.config.mjs  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts
config/: auto-sync.json  cos.env.example  load-config.mjs  load-config.sh  secrets.env.example  settings.example.json
docs/: changelog.md  index.md  requirements.txt
guard/: .gitignore  README.md  guardsvc.service.json  pyproject.toml  sidecar.py  test_guard.py
guard/deploy/: com.chiefofstaff.mcp-guardsvc.plist.template
mcp/: CLAUDE.md  cos-services.cjs  cos-services.mjs  ensure-bridges-win.sh  ensure-bridges.cjs  ensure-bridges.mjs  ensure-bridges.sh  service-manifest.mjs
scripts/: boardapp-run.mjs  gen-cowork-config.mjs  gen-label-bundles.mjs  gen-labels-doc.mjs  gen-launchd.mjs  gen-mcp-json.mjs  join-blob.mjs  loopback-bind.cjs  search-demo.mjs
search/: README.md  pyproject.toml  search.service.json  sidecar.py  test_search.py
tests/: README.md  api-body-gate.mjs  api-body-weight.mjs  api-clean.mjs  api-devices.mjs  api-events.mjs  api-fitness-coaching.mjs  api-fitness-gate.mjs  api-fitness-push.mjs  api-guard-config.mjs  api-health-gate.mjs  api-health-push.mjs  api-healthz.mjs  api-labels.mjs  api-lifecycle.mjs  api-nutrition-diet-profile.mjs  api-nutrition-foodlog.mjs  api-nutrition-gate.mjs  api-nutrition-mealplan.mjs  api-nutrition-pantry.mjs  api-nutrition-weight.mjs  api-prefs.mjs  api-priorities.mjs  api-reminders.mjs  api-schema-guard.mjs  api-search.mjs  api-trust-derive.mjs  (+11 more)
(+441 files in other folders)
