[project]
name = "cos-guard"
version = "0.1.0"
description = "Local-first prompt-injection / jailbreak guard sidecar for the chief-of-staff mail-triage agent."
requires-python = ">=3.11"
# Default deps are LIGHT: just the FastAPI app surface. The real classifier
# (Llama-Prompt-Guard-2 via transformers) needs torch+transformers — ~2GB — so they
# live in the OPTIONAL "model" extra, NOT the default set. That keeps `uv run --extra
# dev pytest` fully offline + fast: the hermetic test forces COS_GUARD_CLASSIFIER=
# heuristic (pure-regex, no torch, no network), so the engine never touches the model.
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
# The real model. Heavy + gated (needs the Llama license + an HF token to download).
# Install only on a host that will actually run the model: `uv sync --extra model`.
model = [
  "torch>=2.2",
  "transformers>=5.12.1",
]
# httpx powers FastAPI's TestClient (the test exercises the HTTP endpoints, not just
# the engine), so it is a dev dep alongside pytest.
dev = [
  "pytest>=8",
  "httpx>=0.27",
]

[tool.uv]
package = false
